--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,10 @@
 	font-size: 1.5rem;
 }
 
-#bootstrap-override button {
-	margin-top: 15px;
+
+#bootstrap-override i {
+	/*vertical-align: center;*/
 }
+
 
 
